# PraxiomHealth

./: .gitmodules  App.js  AppContext.js  BLEService.js  CMakeLists.txt  COMMANDS.md  DashboardScreen.js  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  SettingsScreen.js  WatchScreen.js  WearableDataService.js  app.config.ts  app.json  babel.config.js  eas.json  fix-all.js  fix-kotlin-local.js  fix-kotlin.js  fix-repo.js  gitignore  linker_script.ld  metro.config.js  package-lock.json  package.json  test-calculations.js  test-functionality.js
.github/workflows/: android-build.yml  build-android.yml  build.yml  expo-build.yml
.github/workflows/.github/workflows/: ios-build.yml
android/: gradle.properties
android/app/src/main/: AndroidManifest.xml
cmake-nRF5x/: arm-gcc-toolchain.cmake
components/: CircularProgress.js  ErrorBoundary.js  PraxiomBackground.js
screens/: AuthScreen.js  BiomarkerHistoryScreen.js  BiomarkerInputScreen.js  ComparisonScreen.js  DNATestScreen.js  DashboardScreen-old.js  DashboardScreen.js  DashboardScreen_FIXED.js  DebugTestScreen.js  FitnessAssessmentScreen.js  GarminWearableScreen.js  HistoricalDataScreen.js  OuraRingScreen.js  ProfileScreen.js  ReportScreen.js  ServicesTier1BiomarkerInputScreen.js  SettingsScreen.js  Tier1BiomarkerInputScreen.js  Tier2BiomarkerInputScreen.js  Tier3BiomarkerInputScreen.js  WatchScreen-old.js  WatchScreen.js  WearableService.js
services/: AuditLogger.js  BLEService.js  EncryptionService.js  GarminService.js  NotificationService.js  OuraRingService.js  PDFReportService.js  PraxiomAgeBLETest.js  PraxiomAlgorithm.js  SecureStorageService.js  SecureStorageService_ExpoVersion.js  StorageService.js  StorageService_Enhanced.js  TestScreen.js  Tier1BiomarkerInputScreen.js  TimeSync_Fix_For_WearableService.js  WatchScreen.js  WearableDataService.js  WearableService.js
src/: CMakeLists.txt  Version.h  main.cpp  toolchain.cmake
src/components/praxiom/: BioAgeCalculator.cpp  BioAgeCalculator.h
src/components/settings/: Settings.h
src/displayapp/: CMakeLists.txt  DisplayApp.cpp  DisplayAppRecovery.cpp  DisplayAppRecovery.h  WatchFace.h
src/displayapp/apps/: Apps.h
src/displayapp/fonts/: praxiom_logo.c
src/displayapp/screens/: WatchFacePraxiomHealth.cpp  WatchFacePraxiomHealth.h
src/displayapp/screens/settings/: SettingWatchFace.cpp  SettingWatchFace.h
workflows/: build.yml
